--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0"
   },
@@ -12,7 +13,7 @@
     "prisma": "^6.18.0"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "node -r dotenv/config src/index.js",
     "start": "node src/index.js",
     "seed": "node prisma/seed.js"
   }
